--- a/latest.html
+++ b/latest.html
@@ -1,7 +1,3 @@
-[1.0.0037]
-UI更新，使用Win11风格
-更改Development的进入方式，从此以后的进入方式为命令行参数 --Development
-Development加入测试性程序锁定功能
-初步解决报毒问题
-*修复了下载链接错位的问题*
-https://pan.hotpe.top/f/JLOH4/CmzPrep_Rev1_1.0.0037.zip
+[1.0.0038]
+加入下载更新功能(在这个版本感觉不到就是了)
+https://pan.hotpe.top/f/z6ACg/CmzPrep_Rev1_1.0.0038.zip
